--- a/TPINT_GRUPO_9_LAB4/.classpath
+++ b/TPINT_GRUPO_9_LAB4/.classpath
@@ -13,7 +13,17 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/User/Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar">
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/apache-tomcat-8.5.94/lib/tomcat-api.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/apache-tomcat-8.5.94/lib/servlet-api.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
