--- a/TPINT_GRUPO_9_LAB4/.classpath
+++ b/TPINT_GRUPO_9_LAB4/.classpath
@@ -9,12 +9,17 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="lib" path="S:/Programas/apache-tomcat-8.5.94/lib/servlet-api.jar">
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/apache-tomcat-8.5.94/lib/servlet-api.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="S:/UTN/Segundo año/Segundo Cuatrimestre/Laboratorio de Computacion 4/WorkspaceTPIntegrador/TPINT_GRUPO_9_LAB4/TPINT_GRUPO_9_LAB4/WebContent/WEB-INF/lib/mysql-connector-j-8.1.0.jar">
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/mysql-connector-j-8.1.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/apache-tomcat-8.5.94/lib/jstl-1.2.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
