--- a/TPINT_GRUPO_9_LAB4/WebContent/WEB-INF/web.xml
+++ b/TPINT_GRUPO_9_LAB4/WebContent/WEB-INF/web.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-   version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>TPINT_GRUPO_9_LAB4</display-name>
   <session-config>
-        <session-timeout>30</session-timeout> <!-- Tiempo en minutos -->
-    </session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
   <welcome-file-list>
     <welcome-file>Inicio.jsp</welcome-file>
   </welcome-file-list>
