--- a/TPINT_GRUPO_9_LAB4/.classpath
+++ b/TPINT_GRUPO_9_LAB4/.classpath
@@ -9,22 +9,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/Actividades/TP Integrador/TPINT_GRUPO_9_LAB4/TPINT_GRUPO_9_LAB4/Conectores/gson-2.2.4.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/Actividades/TP Integrador/TPINT_GRUPO_9_LAB4/TPINT_GRUPO_9_LAB4/Conectores/jstl-1.2.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/Actividades/TP Integrador/TPINT_GRUPO_9_LAB4/TPINT_GRUPO_9_LAB4/Conectores/mysql-connector-j-8.1.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nazab/Escritorio/nWhite/Estudios/Programming/UTN/2C 2023/LaboIV/Actividades/TP Integrador/TPINT_GRUPO_9_LAB4/TPINT_GRUPO_9_LAB4/Conectores/servlet-api.jar">
+	<classpathentry kind="lib" path="D:/User/Desktop/workspace4/.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/TPINT_GRUPO_9_LAB4_TPINT_GRUPO_9_LAB4/WEB-INF/lib/mysql-connector-j-8.1.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
